Update environment again,

--- a/docker-compose.redash.v6.yml
+++ b/docker-compose.redash.v6.yml
@@ -53,6 +53,13 @@ services:
     environment:
       QUEUES: "celery"
       WORKERS_COUNT: 1
+      REDASH_WEB_WORKERS: 4
+      POSTGRES_PASSWORD: postgres
+      REDASH_DATABASE_URL: postgresql://postgres:postgres@postgres/postgres
+      PYTHONUNBUFFERED: 0 
+      REDASH_LOG_LEVEL: INFO
+      REDASH_REDIS_URL: redis://redis:6379/0
+      REDASH_COOKIE_SECRET: '00fPkU|&M8`BEq3U|0/#(&-*g66d>YUj'
   scheduled_worker:
     <<: *redash-service
     command: worker
