Add fingerprint into Logstash pipeline and remove x-pack refgerences.

--- a/resources/elk6-redash/pipeline/1000_combined.conf
+++ b/resources/elk6-redash/pipeline/1000_combined.conf
@@ -30,6 +30,7 @@ filter {
     # Add scan_source to tags
     mutate {
       add_field => { "[tags]" => "%{scan_source}" }
+      add_field => { "[fingerprint]" => "%{asset}-%{signature_id} " }
     }
 
     # Create a unique document_id if _unique field exists
